<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/principal"
            android:contentDescription="@string/app_name" />

        <Button
            android:id="@+id/button_collector_rol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rol_collector"
            android:onClick="onCLickSelectCollectorRol" />

        <Button
            android:id="@+id/button_visitor_rol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rol_visitor"
            android:onClick="onClickSelectVisitorRol" />
    </LinearLayout>


</ScrollView>