<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/button_collectors_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/collectors"
            android:onClick="onClickMenuCollectors" />

        <Button
            android:id="@+id/button_prizes_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/prizes"
            android:onClick="onClickMenuPrizes" />

        <Button
            android:id="@+id/button_albums_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/albums"
            android:onClick="onClickMenuAlbums" />

        <Button
            android:id="@+id/button_artists_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/artists"
            android:onClick="onClickArtist"/>
    </LinearLayout>


</RelativeLayout>